--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" as="style" type="text/css" href="/css/lp-reset.css">
-    <link rel="stylesheet" as="style" type="text/css" href="/css/lp-font-awesome.min.css">
-    <link rel="stylesheet" as="style" type="text/css" href="/css/lp-swiper.css">  
-    <link rel="stylesheet" type="text/css" href="/css/validationEngine.jquery.css">
-    <link rel="stylesheet" as="style" type="text/css" href="/css/lp-style.css?date=2021040554604">
+    <link rel="stylesheet" as="style" type="text/css" href="/lp-reset.css">
+    <link rel="stylesheet" as="style" type="text/css" href="/lp-font-awesome.min.css">
+    <link rel="stylesheet" as="style" type="text/css" href="/lp-style.css?date=2021040554604">
   </head>
   <body>
     <div class="page-main">
